--- a/gemeindeportraits.html
+++ b/gemeindeportraits.html
@@ -9,96 +9,146 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+<style>
+@font-face { 
+  font-family: 'CorporateS-Demi';
+  src: url('font/CorporateS-Demi.eot?#iefix') format('embedded-opentype'),  url('font/CorporateS-Demi.otf')  format('opentype'),
+	     url('font/CorporateS-Demi.woff') format('woff'), url('font/CorporateS-Demi.ttf')  format('truetype'), url('font/CorporateS-Demi.svg#CorporateS-Demi') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face { 
+  font-family: 'CorporateS-Light';
+  src: url('font/CorporateS-Light.eot?#iefix') format('embedded-opentype'),  url('font/CorporateS-Light.otf')  format('opentype'),
+	     url('font/CorporateS-Light.woff') format('woff'), url('font/CorporateS-Light.ttf')  format('truetype'), url('font/CorporateS-Light.svg#CorporateS-Light') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+body { font-family: 'CorporateS-Demi' !important; }
 
-<div class="container">
+div.dc-chart { font-family: 'CorporateS-Light' !important; }
 
-    <h2>Gemeindeportraits</h2>
+.dc-chart .axis text, .axis text {
+    fill: #000;
+    font-size: 12px;
+}
 
-    <div id="karte" class="non-float">
-	<div> <strong>Gemeinden</strong> (bitte wählen)
-	<a class="reset" href="javascript:karte.filterAll();dc.redrawAll();" style="display: none;">zurücksetzen</a>
-	<span class="reset" style="display: none;"> | Aktuell ausgewählt: <span class="filter"></span></span>
-	</div>
-    </div>
+.dc-legend {
+	font-size:14px;
+}
 
-	<h3>Kennzahlen</h3>
-	
-	<div id="kennzahlen-chart" class="non-float">
-		<table>
-			<col width="200%">
-			<col width="40%">
-			<tr>
-				<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
-				<td align="right"><span id="bevölkerung"></span></td>
-			</tr>
-			<tr>
-				<td>Anteil Ausländer/innen in % <span class="bevölkerungyear"></span></td>
-				<td align="right"><span id="ausländeranteil"></span></td>
-			</tr>
-			<tr>
-				<td>Haushalte <span class="haushalteyear"></span></td>
-				<td align="right"><span id="haushalte"></span></td>
-			</tr>
-			<tr>
-				<td>Anteil Einpersonenhaushalte in % <span class="haushalteyear"></span></td>
-				<td align="right"><span id="anteileinpersonenhaushalte"></span></td>
-			</tr>
-			<tr>
-				<td>Wohnungen <span class="wohnungenyear"></span></td>
-				<td align="right"><span id="wohnungen"></span></td>
-			</tr>
-			<tr>
-				<td>Neuerstellte Wohnungen <span class="neubauwohnungenyear"></span></td>
-				<td align="right"><span id="neuwohnungen"></span></td>
-			</tr>
-			<tr>
-				<td>Volksschüler/innen <span class="volksschüleryear"></span></td>
-				<td align="right"><span id="volksschüler"></span></td>
-			</tr>
-			<tr>
-				<td>Betriebe <span class="wirtschaftyear"></span></td>
-				<td align="right"><span id="betriebe"></span></td>
-			</tr>
-			<tr>
-				<td>Beschäftigte <span class="wirtschaftyear"></span></td>
-				<td align="right"><span id="beschäftigte"></span></td>
-			</tr>
-			<tr>
-				<td>Steuerfuss Einwohnergemeinde <span class="wirtschaftyear"></span></td>
-				<td align="right"><span id="steuerfuss"></span></td>
-			</tr>
-		</table>
-	</div>
-	
-	<h3>Bevölkerungsentwicklung</h3>
-	
-	<div id="entwicklung-chart" class="non-float">
-	</div>
+.dc-chart .pie-slice.pie-label {
+    fill: #000;
+    font-size: 12px;
+}
 
-	<h3>Altersstruktur <span class="altersstrukturyear"></span></h3>
-	
-	<div id="altersstruktur-chart" class="non-float">
-	</div>
-	
-	<h3>Wirtschaftsstruktur <span class="wirtschaftsstrukturyear"></span></h3>
-	
-	<div id="wirtschaftsstruktur" class="overlaycontainer" style="position: relative;">
-		<div id="wirtschaftsstruktur1-chart" class="non-float" style="position: relative; z-index: 100;">
-		</div>
-		<div id="wirtschaftsstruktur2-chart" class="non-float" style="position: absolute; top: 0; left: 0; z-index: 99;">
-	    </div>
-	</div>
+text.barLabel {
+    fill: #000;
+    font-size: 12px;
+}
+</style>
 
-	<h3>Raumstruktur (Bauzonen) <span class="bauzonenyear"></span></h3>
-	
-	<div id="bauzonen-chart" class="non-float">
-	</div>
-	
-    <div>
-        <a href="javascript:dc.filterAll();%20dc.renderAll();">Reset All</a>
-    </div>
 
+
+<div class="container" style="width:1200px;">
+
+    <h1 style="display: block; width:1200px; overflow: auto;">
+		<span id="maintitle">Kantonsportrait</span>
+		<img id="mainflag" src="" style="margin: 0 30px; vertical-align: middle">
+		<img src="logos/logo-kanton.png" height="100px" align="right" style="vertical-align: middle;"></h1>
+
+	<table style="width:1200px">
+		<tr>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<h3>Kennzahlen</h3>
+				<div id="kennzahlen-chart" class="non-float">
+					<table>
+						<col width="70%">
+						<col width="30%">
+						<tr>
+							<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
+							<td align="right"><span id="bevölkerung"></span></td>
+						</tr>
+						<tr>
+							<td>Anteil Ausländer/innen in % <span class="bevölkerungyear"></span></td>
+							<td align="right"><span id="ausländeranteil"></span></td>
+						</tr>
+						<tr>
+							<td>Haushalte <span class="haushalteyear"></span></td>
+							<td align="right"><span id="haushalte"></span></td>
+						</tr>
+						<tr>
+							<td>Anteil Einpersonenhaushalte in % <span class="haushalteyear"></span></td>
+							<td align="right"><span id="anteileinpersonenhaushalte"></span></td>
+						</tr>
+						<tr>
+							<td>Wohnungen <span class="wohnungenyear"></span></td>
+							<td align="right"><span id="wohnungen"></span></td>
+						</tr>
+						<tr>
+							<td>Neuerstellte Wohnungen <span class="neubauwohnungenyear"></span></td>
+							<td align="right"><span id="neuwohnungen"></span></td>
+						</tr>
+						<tr>
+							<td>Volksschüler/innen <span class="volksschüleryear"></span></td>
+							<td align="right"><span id="volksschüler"></span></td>
+						</tr>
+						<tr>
+							<td>Betriebe <span class="wirtschaftyear"></span></td>
+							<td align="right"><span id="betriebe"></span></td>
+						</tr>
+						<tr>
+							<td>Beschäftigte <span class="wirtschaftyear"></span></td>
+							<td align="right"><span id="beschäftigte"></span></td>
+						</tr>
+						<tr>
+							<td>Steuerfuss Einwohnergemeinde <span class="wirtschaftyear"></span></td>
+							<td align="right"><span id="steuerfuss"></span></td>
+						</tr>
+					</table>
+				</div>
+			</td>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<div id="karte" class="non-float" >
+				<!--<div> <strong>Gemeinden</strong> (bitte wählen)
+				<a class="reset" href="javascript:karte.filterAll();dc.redrawAll();" style="display: none;">zurücksetzen</a>
+				<span class="reset" style="display: none;"> | Aktuell ausgewählt: <span class="filter"></span></span>
+				</div>-->
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<h3>Bevölkerungsentwicklung</h3>
+				<div id="entwicklung-chart" class="non-float">
+				</div>
+			</td>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<h3>Altersstruktur <span class="altersstrukturyear"></span></h3>
+				<div id="altersstruktur-chart" class="non-float" style="text-align:center; display:block;">
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<h3>Wirtschaftsstruktur <span class="wirtschaftsstrukturyear"></span></h3>
+				<div id="wirtschaftsstruktur" class="overlaycontainer" style="position: relative;">
+					<div id="wirtschaftsstruktur1-chart" class="non-float" style="position: relative; z-index: 100;">
+					</div>
+					<div id="wirtschaftsstruktur2-chart" class="non-float" style="position: absolute; top: 0; left: 0; z-index: 99;">
+					</div>
+				</div>
+			</td>
+			<td valign="top" style="width:50%; padding:10px 20px;">
+				<h3>Raumstruktur (Bauzonen) <span class="bauzonenyear"></span></h3>
+				<div id="bauzonen-chart" class="non-float">
+				</div>
+			</td>
+		</tr>
+	</table>
 </div>
+<div>Herausgeberin: Amt für Raumplanung des Kantons Zug, Fachstelle für Statistik. Datenquellen: Bundesamt für Statistik.</div>
+<div>Stand Februar 2018. Interessiert an weiteren statistischen Informationen? Besuchen Sie uns im Internet: <a href="http://www.zg.ch/statistik" target="_blank">www.zg.ch/statistik</a></div>
 
 <script type="text/javascript" src="js/libraries/queue.js"></script>
 <script type="text/javascript" src="js/libraries/d3.js"></script>
@@ -593,12 +643,12 @@ function redraw() {
 		//Karte
 		
 		var totalWidth = document.getElementById('karte').offsetWidth;
-		var mapheight = 400
-		var heightmax = 400
+		var mapheight = 350
+		var heightmax = 350
 		var heightmin = 240
 		var mapheight = Math.min( heightmin + (totalWidth - 286)*1, heightmax);
-		var scale = 82000
-		var scalemax = 82000
+		var scale = 75000
+		var scalemax = 75000
 		var scalemin = 50000
 		var scale = Math.min( scalemin + (totalWidth - 286)*180.5, scalemax);
 		var lat = 8.548589899
@@ -640,15 +690,32 @@ function redraw() {
                     })
 					.addFilterHandler(function (filters, filter) {
 						if (filter != "Zugersee" && filter != "Aegerisee") {
+							$('#mainflag').attr("src", "logos/"+ filter.toLowerCase().replace("ü", "ü").replace("ä", "ä")+ ".png")
+							$('#maintitle').html("Gemeindeporträt "+filter);
+							$('.gemeindename').html("Gemeinde "+filter);
 							filters.length = 0; // empty the array
 							filters.push(filter);
 						}
 						return filters;
-						
 					})
+					.removeFilterHandler(function (filters, filter) {
+						$('#mainflag').attr("src", "logos/kanton.png")
+						$('#maintitle').html("Kantonsporträt");
+						$('.gemeindename').html("Kanton Zug");
+						filters.length = 0;
+						return filters;
+					});
 					;
 			
 			var number=1;
+			
+			dc.override(karte, "filterAll", function () {
+				$('#mainflag').attr("src", "logos/kanton.png")
+				$('#maintitle').html("Kantonsporträt");
+				$('.gemeindename').html("Kanton Zug");
+				var g = this._filterAll();
+				return g;
+			});
 			
 			bevölkerung
 				.valueAccessor(total).formatNumber(germanFormatters.numberFormat(","))
@@ -1013,7 +1080,7 @@ function redraw() {
 				.domain(characteristicsBauzonen)
 				.range(colorscheme[1][6]);
 			
-			var bauzonenHeight=Math.min(500, (1.2*totalWidth));
+			var bauzonenHeight=Math.min(400, (1*totalWidth));
 			
 			bauzonenChart
 				.width(totalWidth)
