Gemeindeportraits um einige Zahlen ergänzt

--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -31,6 +31,14 @@
 			<col width="200%">
 			<col width="40%">
 			<tr>
+				<td>Fläche in ha ohne Seen</td>
+				<td align="right"><span id="fläche"></span></td>
+			</tr>
+			<tr id="müm" style="display: none;">
+				<td>Höhenlage in Meter über Meer</td>
+				<td align="right"><span id="höhenlage"></span></td>
+			</tr>
+			<tr>
 				<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
 				<td align="right"><span id="bevölkerung"></span></td>
 			</tr>
