--- a/gemeindeportraits.html
+++ b/gemeindeportraits.html
@@ -73,6 +73,14 @@ text.barLabel {
 						<col width="70%">
 						<col width="30%">
 						<tr>
+							<td>Fläche in ha ohne Seen</td>
+							<td align="right"><span id="fläche"></span></td>
+						</tr>
+						<tr id="müm" style="display: none;">
+							<td>Höhenlage in Meter über Meer</td>
+							<td align="right"><span id="höhenlage"></span></td>
+						</tr>
+						<tr>
 							<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
 							<td align="right"><span id="bevölkerung"></span></td>
 						</tr>
