Kleine Verbesserungen Gemeindeportrait

--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -27,23 +27,23 @@
 	<div id="kennzahlen-container">
 	<h3 id="title">Kennzahlen <span class="gemeindename">Kanton Zug</span> </h3> 
 	<div id="kennzahlen-chart" class="non-float">
-		<table>
-			<col width="200%">
-			<col width="40%">
+		<table width="100%">
+			<col width="70%">
+			<col width="30%">
 			<tr>
-				<td>Fläche in ha ohne Seen</td>
-				<td align="right"><span id="fläche"></span></td>
+				<td>Fläche ohne Seen</td>
+				<td align="right"><span id="fläche"></span><span> ha</span></td>
 			</tr>
 			<tr id="müm" style="display: none;">
-				<td>Höhenlage in Meter über Meer</td>
-				<td align="right"><span id="höhenlage"></span></td>
+				<td>Höhenlage</td>
+				<td align="right"><span id="höhenlage"></span> m.ü.M.</td>
 			</tr>
 			<tr>
 				<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
 				<td align="right"><span id="bevölkerung"></span></td>
 			</tr>
 			<tr>
-				<td>Anteil Ausländer/innen in % <span class="bevölkerungyear"></span></td>
+				<td>Anteil Ausländer/innen<span class="bevölkerungyear"></span></td>
 				<td align="right"><span id="ausländeranteil"></span></td>
 			</tr>
 			<tr>
@@ -51,7 +51,7 @@
 				<td align="right"><span id="haushalte"></span></td>
 			</tr>
 			<tr>
-				<td>Anteil Einpersonenhaushalte in % <span class="haushalteyear"></span></td>
+				<td>Anteil Einpersonenhaushalte<span class="haushalteyear"></span></td>
 				<td align="right"><span id="anteileinpersonenhaushalte"></span></td>
 			</tr>
 			<tr>
