--- a/gemeindeportraits.html
+++ b/gemeindeportraits.html
@@ -69,23 +69,23 @@ text.barLabel {
 			<td valign="top" style="width:50%; padding:10px 20px;">
 				<h3>Kennzahlen</h3>
 				<div id="kennzahlen-chart" class="non-float">
-					<table>
+					<table width="100%">
 						<col width="70%">
 						<col width="30%">
 						<tr>
-							<td>Fläche in ha ohne Seen</td>
-							<td align="right"><span id="fläche"></span></td>
+							<td>Fläche ohne Seen</td>
+							<td align="right"><span id="fläche"></span> ha</td>
 						</tr>
 						<tr id="müm" style="display: none;">
-							<td>Höhenlage in Meter über Meer</td>
-							<td align="right"><span id="höhenlage"></span></td>
+							<td>Höhenlage</td>
+							<td align="right"><span id="höhenlage"></span> m.ü.M.</td>
 						</tr>
 						<tr>
 							<td>Ständige Wohnbevölkerung <span class="bevölkerungyear"></span></td>
 							<td align="right"><span id="bevölkerung"></span></td>
 						</tr>
 						<tr>
-							<td>Anteil Ausländer/innen in % <span class="bevölkerungyear"></span></td>
+							<td>Anteil Ausländer/innen<span class="bevölkerungyear"></span></td>
 							<td align="right"><span id="ausländeranteil"></span></td>
 						</tr>
 						<tr>
@@ -93,7 +93,7 @@ text.barLabel {
 							<td align="right"><span id="haushalte"></span></td>
 						</tr>
 						<tr>
-							<td>Anteil Einpersonenhaushalte in % <span class="haushalteyear"></span></td>
+							<td>Anteil Einpersonenhaushalte<span class="haushalteyear"></span></td>
 							<td align="right"><span id="anteileinpersonenhaushalte"></span></td>
 						</tr>
 						<tr>
