Umstellung auf FTP Kantonsvergleich

--- a/kantonsvergleich_einbaucode.html
+++ b/kantonsvergleich_einbaucode.html
@@ -1,7 +1,7 @@
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/stat_zg_generals.js/download"></script>
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/stat_zg_row.js/download"></script>
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/stat_zg_choropleth.js/download"></script>
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/jquery.slinky.js/download"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/stat_zg_generals.js"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/stat_zg_row.js"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/stat_zg_choropleth.js"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/libraries/jquery.slinky.js"></script>
 
 	<div class="slincky-wrapper">
 		<section>
