Umstellung Gemeindeportraits auf SFTP

--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -1,11 +1,11 @@
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/queue.js/download"></script>
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/stat_zg_generals.js/download"></script>
-<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/bibliotheken/javascript/stat_zg_gemeindeportrait.js/download"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/libraries/queue.js"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/stat_zg_generals.js"></script>
+<script type="text/javascript" src="/behoerden/baudirektion/statistikfachstelle/daten/js/stat_zg_gemeindeportrait.js"></script>
 
 <div class="container" id="default">
 
     <div style="float:right; position: absolute; right:0px; top:30px">
-		<img id="flag" src='/behoerden/baudirektion/statistikfachstelle/bibliotheken/grafiken/kanton.png/download' alt='Wappen' width='75' >
+		<img id="flag" src='/behoerden/baudirektion/statistikfachstelle/daten/logos/Kanton.png' alt='Wappen' width='75' >
 	</div>
 	
 	<div id="karte" class="non-float">
