--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -114,11 +114,22 @@
 	</div>
 	</div>
 	
-    <div style="margin-top:10px">
+    <!--<div style="margin-top:10px">
         <a href="javascript:karte.filterAll(); dc.redrawAll();">Zurück zum Kantonsportrait</a>
-    </div>
+    </div>-->
 
 </div>
+
+<form action="https://v2.convertapi.com/web/to/pdf?Secret=IApvnZBoUyuZD92G&download=attachment" method="post" enctype="multipart/form-data">
+	<input type="hidden" name="Url" value="https://www.zg.ch/behoerden/baudirektion/statistikfachstelle/daten/gemeindeportraits.html" />
+	<input type="hidden" name="FileName" value="Portrait" />
+	<input type="hidden" name="ConversionDelay" value="3" />
+	<input type="hidden" name="ViewportWidth" value="1200" />
+	<input type="hidden" name="ViewportHeight" value="1887" />
+	<input type="hidden" name="PageSize" value="a4" />
+	<input type="submit" value="Portrait als PDF ausgeben"/>
+</form>
+
 
 <script type="text/javascript">
 loadGemeindeportrait();
