--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -75,7 +75,7 @@
 				<td align="right"><span id="beschäftigte"></span></td>
 			</tr>
 			<tr>
-				<td>Steuerfuss Einwohnergemeinde <span class="wirtschaftyear"></span></td>
+				<td>Steuerfuss <span class="ebene">Kanton</span> <span class="steuerfussyear"></span></td>
 				<td align="right"><span id="steuerfuss"></span></td>
 			</tr>
 		</table>
