--- a/gemeindeportraits.html
+++ b/gemeindeportraits.html
@@ -117,8 +117,8 @@ text.barLabel {
 							<td align="right"><span id="beschäftigte"></span></td>
 						</tr>
 						<tr>
-							<td>Steuerfuss Einwohnergemeinde <span class="wirtschaftyear"></span></td>
-							<td align="right"><span id="steuerfuss"></span></td>
+							<td>Steuerfuss <span class="ebene">Kanton</span> <span class="steuerfussyear"></span></td>
+				<td align="right"><span id="steuerfuss"></span></td>
 						</tr>
 					</table>
 				</div>
