--- a/kantonsvergleich_einbaucode.html
+++ b/kantonsvergleich_einbaucode.html
@@ -44,6 +44,27 @@
 							<li><a href="javascript:;" class="selection" id="15-02">Maturitätsquote</a></li>
 						</ul>
 					</li>
+					<li>
+						<a href="#">Mobilität und Verkehr</a>
+						<ul>
+							<li><a href="javascript:;" class="selection" id="11-01">Motorisierungungsgrad</a></li>
+							<li><a href="javascript:;" class="selection" id="11-02">Verkehrsunfälle pro 10000 Einwohner</a></li>
+							<li><a href="javascript:;" class="selection" id="11-03">Relativer Pendlersaldo</a></li>
+							<li><a href="javascript:;" class="selection" id="11-04">Pendleranteil</a></li>
+							<li><a href="javascript:;" class="selection" id="11-05">Anteil ÖV-Pendler</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">Wohnen und Bau</a>
+						<ul>
+							<li><a href="javascript:;" class="selection" id="09-01">Wohneigentumsquote</a></li>
+							<li><a href="javascript:;" class="selection" id="09-02">Leerwohnungsziffer</a></li>
+							<li><a href="javascript:;" class="selection" id="09-03">Wohnflächenverbrauch pro Person</a></li>
+							<li><a href="javascript:;" class="selection" id="09-04">Quadratmetermietpreis</a></li>
+							<li><a href="javascript:;" class="selection" id="09-05">Einfamilienhausanteil</a></li>
+							<li><a href="javascript:;" class="selection" id="09-06">Neuwohnungen pro 1000 Einwohner</a></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</section>
