--- a/iframecontent.html
+++ b/iframecontent.html
@@ -206,7 +206,7 @@ else {
 			}
 		}
 	, 800);
-	if (urlparams.titelAnzeigen==false) {
+	if (urlparams.titelAnzeigen=="false") {
 		$(".maintitle").remove();
 	}
 }
