Erweiterung Gemeindeportrait gemäss Wunsch von Hünenberg

--- a/gemeindeportrait_einbaucode.html
+++ b/gemeindeportrait_einbaucode.html
@@ -19,6 +19,8 @@
 			<li><a id="kennzahlen" class="hiderow" href="javascript:;">Kennzahlen</a> </li>
 			<li><a id="entwicklung" class="hiderow" href="javascript:;">Bevölkerungsentwicklung</a> </li>
 			<li><a id="altersstruktur" class="hiderow" href="javascript:;">Altersstruktur</a> </li>
+			<li><a id="geschlechtsstruktur" class="hiderow" href="javascript:;">Geschlechterverhältnis</a> </li>
+			<li><a id="religionsstruktur" class="hiderow" href="javascript:;">Konfessionen</a> </li>
 			<li><a id="wirtschaftsstruktur" class="hiderow" href="javascript:;">Wirtschaftsstruktur</a> </li>
 			<li><a id="bauzonen" class="hiderow" href="javascript:;">Raumstruktur</a> </li>
 		</ul>
@@ -96,6 +98,20 @@
 	</div>
 	</div>
 
+	<div id="geschlechtsstruktur-container">
+	<h3 id="title">Geschlechterverhältnis <span class="gemeindename">Kanton Zug</span> <span class="geschlechtsstrukturyear"></span></h3>
+	
+	<div id="geschlechtsstruktur-chart" class="non-float" style="text-align:center; display:block;">
+	</div>
+	</div>
+
+	<div id="religionsstruktur-container">
+	<h3 id="title">Konfessionen <span class="gemeindename">Kanton Zug</span> <span class="religionsstrukturyear"></span></h3>
+	
+	<div id="religionsstruktur-chart" class="non-float" style="text-align:center; display:block;">
+	</div>
+	</div>
+	
 	<div id="wirtschaftsstruktur-container">
 	<h3 id="title">Wirtschaftsstruktur <span class="gemeindename">Kanton Zug</span> <span class="wirtschaftsstrukturyear"></span></h3>
 	
@@ -106,7 +122,7 @@
 	    </div>
 	</div>
 	</div>
-
+	
 	<div id="bauzonen-container">
 	<h3 id="title">Raumstruktur (Bauzonen) <span class="gemeindename">Kanton Zug</span> <span class="bauzonenyear"></span></h3>
 	
