--- a/iframecontent.html
+++ b/iframecontent.html
@@ -33,6 +33,8 @@
 			<li><a id="kennzahlen" class="hiderow" href="javascript:;">Kennzahlen</a> </li>
 			<li><a id="entwicklung" class="hiderow" href="javascript:;">Bevölkerungsentwicklung</a> </li>
 			<li><a id="altersstruktur" class="hiderow" href="javascript:;">Altersstruktur</a> </li>
+			<li><a id="geschlechtsstruktur" class="hiderow" href="javascript:;">Geschlechterverhältnis</a> </li>
+			<li><a id="religionsstruktur" class="hiderow" href="javascript:;">Konfessionen</a> </li>
 			<li><a id="wirtschaftsstruktur" class="hiderow" href="javascript:;">Wirtschaftsstruktur</a> </li>
 			<li><a id="bauzonen" class="hiderow" href="javascript:;">Raumstruktur</a> </li>
 		</ul>
@@ -107,6 +109,20 @@
 	<h3 id="title">Altersstruktur <span class="gemeindename">Kanton Zug</span> <span class="altersstrukturyear"></span></h3>
 	
 	<div id="altersstruktur-chart" class="non-float" style="text-align:center; display:block;">
+	</div>
+	</div>
+
+	<div id="geschlechtsstruktur-container">
+	<h3 id="title">Geschlechterverhältnis <span class="gemeindename">Kanton Zug</span> <span class="geschlechtsstrukturyear"></span></h3>
+	
+	<div id="geschlechtsstruktur-chart" class="non-float" style="text-align:center; display:block;">
+	</div>
+	</div>
+
+	<div id="religionsstruktur-container">
+	<h3 id="title">Konfessionen <span class="gemeindename">Kanton Zug</span> <span class="religionsstrukturyear"></span></h3>
+	
+	<div id="religionsstruktur-chart" class="non-float" style="text-align:center; display:block;">
 	</div>
 	</div>
 
