--- a/iframecontent.html
+++ b/iframecontent.html
@@ -14,6 +14,9 @@
 	<link rel="stylesheet" type="text/css" href="https://www.zg.ch/theming.css?cachekey=e2defade10841fce56eb3205f8bae14a" />
 	<link rel="stylesheet" type="text/css" href="https://www.zg.ch/behoerden/gesundheitsdirektion/statistikfachstelle/customstyles_css?ts=" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.6.1/iframeResizer.contentWindow.min.js"></script>
+
+	<style>a[target="_blank"]::before{content:"" !important}</style>
+
 </head>
 <body>
 
@@ -150,7 +153,7 @@
 
 </div>
 
-<form id="downloadPdf" action="https://v2.convertapi.com/web/to/pdf?Secret=IApvnZBoUyuZD92G&download=attachment&ignoreparam=1" method="post" enctype="multipart/form-data">
+<form style="float: left;" id="downloadPdf" action="https://v2.convertapi.com/web/to/pdf?Secret=IApvnZBoUyuZD92G&download=attachment&ignoreparam=1" method="post" enctype="multipart/form-data">
 	<input type="hidden" name="Url" value="https://www.zg.ch/behoerden/gesundheitsdirektion/statistikfachstelle/daten/gemeindeportraits.html" />
 	<input type="hidden" name="FileName" value="Portrait" />
 	<input type="hidden" name="ConversionDelay" value="5" />
@@ -159,6 +162,8 @@
 	<input type="hidden" name="PageSize" value="a4" />
 	<input type="submit" value="Portrait als PDF ausgeben"/>
 </form>
+
+<p style="float: right;"><a href="https://www.zg.ch/behoerden/gesundheitsdirektion/statistikfachstelle" target="_blank">Weitere Zahlen</a></p>
 
 <script type="text/javascript">
 $('#downloadPdf').submit(function(ev) {
@@ -182,7 +187,6 @@ loadGemeindeportrait(version="iframe")
 function GetQueryString()
 {
 	var qs = window.location.toString().split("?")[1];
-	console.log(qs);
 	if (typeof qs != "undefined" & qs!= "selection" & qs!= "selection&wmode=transparent") {
 		qsobj = JSON.parse('{"' + qs.replace(/&/g, '","').replace(/=/g,'":"') + '"}', function(key, value) { return key===""?value:decodeURIComponent(value) });
 		return qsobj;
@@ -217,9 +221,7 @@ else {
 	$('head').append('<link rel="stylesheet" type="text/css" href="'+urlparams.addCSSfiles+'" />');
 	setTimeout(	
 		function() {
-			console.log(urlparams.gemeinde);
 			urlparams.gemeinde=urlparams.gemeinde.replace("ae", "ä").replace("oe", "ö").replace("ue", "ü");
-			console.log(urlparams.gemeinde);
 			simulateClick(d3.select("g."+urlparams.gemeinde+" > path").node());
 			if (urlparams.nurDieseGemeinde=="true") {
 				d3.selectAll("g > path").on('click',null);
