Datum immer aktuell anzeigen

--- a/gemeindeportraits.html
+++ b/gemeindeportraits.html
@@ -163,7 +163,12 @@ text.barLabel {
 	</table>
 </div>
 <div>Herausgeberin: Amt für Raumplanung des Kantons Zug, Fachstelle für Statistik. Datenquellen: Bundesamt für Statistik.</div>
-<div>Stand Februar 2018. Interessiert an weiteren statistischen Informationen? Besuchen Sie uns im Internet: <a href="http://www.zg.ch/statistik" target="_blank">www.zg.ch/statistik</a></div>
+<div>Stand <script> var today = new Date();
+var dd = today.getDate();
+var mm = today.getMonth() + 1; //January is 0!
+var yyyy = today.getFullYear();
+today = dd + '.' + mm + '.' + yyyy;
+document.write(today); </script>. Interessiert an weiteren statistischen Informationen? Besuchen Sie uns im Internet: <a href="http://www.zg.ch/statistik" target="_blank">www.zg.ch/statistik</a></div>
 
 </div>
 
